--- a/index.html
+++ b/index.html
@@ -3,55 +3,30 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Fetch</title>
+    <title>Personagens</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parse/3.4.1/parse.min.js"></script>
     <script src="script.js" defer></script>
-    <style>
-        table {
-            border-collapse: collapse;
-            border-spacing: 0;
-        }
-
-        th,
-        td {
-            padding: 10px 20px;
-            border: 1px solid #000;
-        }
-
-        ul {
-            display: flex;
-            list-style: none;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>Fetch</h1>
-    <table id="tabela">
-        <tr>
-            <th>Nº</th>
-            <th>NOME</th>
-            <th>IDADE</th>
-        </tr>
 
-    </table>
+    <h1>BANDAS</h1>
+
+    <hr>
+    <ul id="lista"></ul>
+    <hr><br>
+
     <p>
-        Clique no botão para carregar a lista:
-        <button id="btFetch" onclick="fetchStarWarsPeople()">Executar o Fetch</button>
+        <strong id="inserir">INSERIR BANDAS</strong><br><br><br>
+        Nome: <input type="text" id="inputNome">
+        Ano de Criacão: <input type="number" id="inputAnoCriacao">
+        Musica: <input type="text" id="inputMusica">
+        Lançamento: <input type="text" id="inputLancamento">
+        <button id="btnInserir">Inserir</button>
     </p>
-    <p>
-        <button id="btProxPag" onclick="fetchProxPag()">Próxima Página</button>
-    </p>
-    <table id="tabelaFetch">
-        <tr>
-            <th>NOME</th>
-            <th>NASCIMENTO</th>
-            <th>ALTURA</th>
-            <th>PESO</th>
-            <th>CABELO</th>
-            <th>OLHOS</th>
-            <th>GENERO</th>
-        </tr>
-    </table>
+
 </body>
 
 </html>
